--- a/src/pages/Home/Header/Header.css
+++ b/src/pages/Home/Header/Header.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 640px){
+    .header-details{
+    padding-top: 148px !important;
+    padding-left: 51px !important;
+}
+}
 .header{
     background-image: url('https://template.hasthemes.com/garcia/garcia/assets/images/slider/slider-1.jpg');
     height: 785px;
